syntax = "proto3";

option csharp_namespace = "AuthService.Grpc";

package auth;


service AuthService {
    rpc CreateUserAsync (UserSignUpRequest) returns (ServiceResultReply);
    rpc LoginAsync (LoginRequest) returns (ServiceResultReply);
}

message UserSignUpRequest{
	string Username = 1;
    string Email = 2;
    string Password = 3;
} 

message LoginRequest{
	string Username = 1;
    string Password = 2;
} 

message ServiceResultReply{
    ResponseStatusGrpc status = 1;
    string token = 2; 
    string message = 3;                
    repeated string errors = 4;        
}

enum ResponseStatusGrpc {
    Success = 0;
    Error = 1;
    NotFound = 2;
    ValidationError = 3;
    Unauthorized = 4;
    Forbidden = 5;
}

